# Understand-Anything-MCP

./: .gitignore  README.md  kg_loader.py  pyproject.toml  server.py
tests/: test_kg_loader.py
tests/fixtures/: domain-graph.json  knowledge-graph.json
